--- a/default.config.yml
+++ b/default.config.yml
@@ -89,6 +89,7 @@ homebrew_installed_packages:
   - warrensbox/tap/tfswitch
   - packer
   - romkatv/powerlevel10k/powerlevel10k
+  - coreutils
   # *** Java ***
   - jenv # Manage your Java environment
   - jmeter # Load testing and performance measurement application
@@ -115,6 +116,7 @@ homebrew_cask_apps:
   - sourcetree
   - adoptopenjdk8 #Java JDK
   - adoptopenjdk11 #Java JDK
+  - powershell
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps: []
