--- a/default.config.yml
+++ b/default.config.yml
@@ -69,8 +69,6 @@ homebrew_installed_packages:
   - bash-completion
   - git
   - github/gh/gh
-  - go
-  - gpg
   - hub
   - mysql
   - nmap
@@ -84,16 +82,16 @@ homebrew_installed_packages:
   - ssh-copy-id
   - tmux
   - wget
+  - yarn
   - zsh-history-substring-search
 
   # *** DevOps ***
   - awscli
   - jq
-  - packer
   - tree
-  - warrensbox/tap/tfswitch
 
   # *** Java ***
+  - gradle@6 # Build tool.
   - jenv # Manage your Java environment
   - jmeter # Load testing and performance measurement application
   - maven # Java-based project management
@@ -105,20 +103,21 @@ homebrew_taps:
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
+  - adoptopenjdk8 
+  - adoptopenjdk11 
   - chromedriver
+  - datagrip
   - docker
 #  - google-chrome - preinstalled
+  - intellij-idea
   - mysqlworkbench
   - pgadmin4
   - slack
-  - vagrant
-  - virtualbox
-  - virtualbox-extension-pack
   - iterm2
   - postman
+  - session-manager-plugin
   - sourcetree
-  - adoptopenjdk8 #Java JDK
-  - adoptopenjdk11 #Java JDK
+  - webstorm
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps: []
