Adding grype and syft

--- a/default.config.yml
+++ b/default.config.yml
@@ -92,6 +92,8 @@ homebrew_installed_packages:
   - packer
   - tree
   - warrensbox/tap/tfswitch
+  - anchore/grype
+  - anchore/syft
 
   # *** Java ***
   - jenv # Manage your Java environment
